# perp-email-code-getter-tg-bot

./: pyproject.toml
src/: app.py  config.py  handlers.py  messages.py  microsoft_device_flow.py  service.py  storage.py  web.py
tests/: test_subscription_keys.py  test_web_flow.py
