[project]
name = "perp-tg-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.28.2",
    "aiohttp-socks>=0.11.0",
    "fastapi[standard]>=0.115.0",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.32.0",
]
